--- a/VgySdk/VgySdk.csproj
+++ b/VgySdk/VgySdk.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+	<PackageId>VgySDK</PackageId>
+	<Version>1.0.0</Version>
+	<Authors>Linh Nguyen</Authors>
+	<Company>Freelance</Company>
   </PropertyGroup>
 
   <ItemGroup>
